Missing breakpoint contribution point

--- a/package.json
+++ b/package.json
@@ -133,6 +133,11 @@
         }
       }
     },
+    "breakpoints": [
+      {
+        "language": "m68k"
+      }
+    ],
     "debuggers": [
       {
         "type": "vamiga",
