--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "publisher": "gigabates",
   "license": "SEE LICENSE IN LICENSE.txt",
   "preview": true,
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:grahambates/vscode-vamiga-debugger.git"
-  },
+  "repository": "https://github.com/grahambates/vscode-vamiga-debugger.git",
   "engines": {
     "vscode": "^1.104.0"
   },
